[gd_scene load_steps=3 format=3 uid="uid://bebtvpatmwspl"]

[ext_resource type="Script" path="res://Scripts/final_museum.gd" id="1_uslny"]
[ext_resource type="Texture2D" uid="uid://c3nluimbm5w" path="res://Sprites/UI/museum_screen.png" id="2_b3qoc"]

[node name="FinalMuseum" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 4
script = ExtResource("1_uslny")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_b3qoc")
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "Museu de Finais"

[node name="ProgressLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1280, 620)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="EndingsGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Voltar"
flat = true

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Jogar"
